<resources>
    <string name="app_name">Schedulog</string>
    <string name="button_test_write">Test Write</string>
    <string name="button_test_read">Test Read</string>

    <!-- menu strings -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="log_in_string">LOG IN</string>
    <string name="register_string">REGISTER</string>
    <string name="twittertext_string">Twitter</string>
    <string name="othertext_string">Other</string>

    <!-- register strings -->
    <string name="passtext_string">Password</string>
    <string name="passconftext_string">Confirm Password</string>
    <string name="emailtext_string">Email</string>
    <string name="usernametext_string">Username</string>
    <string name="signupbuttonname_string">SIGN UP</string>
    <string name="registertitle_string">Register</string>

    <!--  login strings  -->
    <string name="passwordhint_string">Password</string>
    <string name="username_email_string">Username/Email</string>
    <string name="loginbuttontext_string">LOGIN</string>
    <string name="logintitle_string">Login</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="button_select_picture">Select Picture</string>
    <string name="button_load_picture">Load Picture</string>

    <!--  create_event strings  -->
    <string name="createeventtitle_string">Create Event</string>
    <string name="eventtitletext_string">Name of event</string>
    <string name="eventstartendtext_string">Start time - End time</string>
    <string name="eventdatetext_string">Date of event</string>
    <string name="eventdesctext_string">Description of event</string>
    <string name="createeventtext_string">create event</string>
    <string name="addtags_string">Add Tags</string>
    <string name="select_date">Select Date</string>

    <!--  accountprofile strings  -->
    <string name="logout_text_string">Logout</string>
    <string name="manage_acc_text_string">Manage Account Info</string>
    <string name="user_first_last_name_string">Firstname Lastname</string>
    <string name="username_string">"@username"</string>
    <string name="button_write_a_review">Write a Review</string>
    <string name="write_a_review_hint">Write a review...</string>
    <string name="submit">Submit</string>
    <string name="text_value_rating">Unrated</string>
    <string name="text_rating">Rating:</string>
    <string name="delete_account">Delete Account</string>
    <string name="hint_enter_last_name">Enter Last Name Here</string>
    <string name="hint_enter_first_name">Enter First Name Here</string>
    <string name="hint_enter_username">Enter Username Here</string>

    <!--  feed strings  -->
    <string name="share_event_button_text">Share Event</string>
    <string name="attend_event_button_text">Attend Event</string>
    <string name="attending_event_button_text">Attending</string>

    <string name="consumerKey">your_consumer_key</string>
    <string name="consumerSecret">your_consumer_secret</string>
    <string name="accessToken">your_access_token</string>
    <string name="accessTokenSecret">your_access_token_secret</string>


</resources>