<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/user_profile"
        android:layout_width="229dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/_bg__avatar_ek1"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/button_padding_margin"
                android:layout_marginTop="@dimen/button_padding_margin"
                android:layout_marginEnd="@dimen/button_padding_margin"
                android:layout_marginBottom="@dimen/button_padding_margin"
                android:scaleType="fitXY"
                android:src="@drawable/user_profile"
                app:shapeAppearanceOverlay="@style/ImageStyle_Corners_Rounded"
                tools:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/user_first_last_name"
            android:layout_width="155dp"
            android:layout_height="22dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/button_padding_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/button_padding_margin"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/avatar"
            android:text="@string/user_first_last_name_string"
            android:textColor="@color/_bg__logout_button_ek1_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username"
            android:layout_width="83dp"
            android:layout_height="23dp"
            android:layout_below="@+id/user_first_last_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/button_padding_margin"
            android:layout_marginLeft="67dp"
            android:layout_marginEnd="@dimen/button_padding_margin"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/avatar"
            android:gravity="center_vertical"
            android:text="@string/username_string"
            android:textColor="@color/username_color"
            android:textSize="14sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/user_rating_info"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile"
        tools:visibility="visible">


        <TextView
            android:id="@+id/textRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_rating" />

        <TextView
            android:id="@+id/textValueRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_value_rating" />

        <RatingBar
            android:id="@+id/ratedUserBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/button_padding_margin"
            android:layout_marginTop="@dimen/button_padding_margin"
            android:layout_marginEnd="@dimen/button_padding_margin"
            android:layout_marginBottom="@dimen/button_padding_margin"
            android:filterTouchesWhenObscured="false"
            android:focusableInTouchMode="false"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize=".01" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/write_review_button"
        android:layout_width="145dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_rating_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_rating_info"
        app:layout_constraintTop_toTopOf="@+id/user_rating_info"
        tools:visibility="visible">

        <Button
            android:id="@+id/buttonWriteReview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/text_button_write_a_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/button_write_a_review"
            android:textColor="@color/_bg__logout_button_ek1_color"
            android:textSize="16sp" />

    </RelativeLayout>

    <!--This feature is currently disabled-->
    <RelativeLayout
        android:id="@+id/event_history_button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_rating_info"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="gone">

        <Button
            android:id="@+id/event_history_button_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/event_history_button_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="Event History"
            android:textColor="@color/_bg__logout_button_ek1_color"
            android:textSize="16sp"
            tools:visibility="visible" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
